kubernetes/applications/ingress/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-deployments

spec:
  ingressClassName: nginx
  rules:
    - host: frankensound.test
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: gateway-service
                port:
                  number: 5000
